--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "joi": "^17.6.0",
+    "mongodb": "^4.3.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
