--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "joi": "^17.6.0",
     "mongodb": "^4.3.1",
+    "nodemailer": "^6.7.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
